# syncrim-deprecated

./: Cargo.toml  README.md
examples/: component.rs  modal.rs  self_directed.rs  serde.rs  sim.rs  sim2.rs  sim4.rs  sim_adder.rs  sim_reg.rs  simple.rs  simple_vizia.rs  topsort.rs  topsort_nodes.rs
src/: common.rs  lib.rs  models.rs  port.rs  reg.rs  reg_view.rs  register.rs  wire.rs
