[package]
name = "syncrim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
rfd = "0.11.3"
serde = "1.0.160"
serde_json = "1.0.96"
vizia = { git = "https://github.com/vizia/vizia.git", features = ["serde"] }
